update usability test language

--- a/innovation.html
+++ b/innovation.html
@@ -113,10 +113,10 @@
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/innovation/innovation-5.png" alt="Innovation Day Sketches" class="img-fluid"></p>
                   <div class="spacer"></div>
-                  <p>Using Invision to create a quick prototype, I walked users through a scenario where they would have to use the advanced filitering to select tickets dependent on predetermined criteria. From the very first user test, this approach seemed confusing to the users. The first user did not comprehend that these advanced filters, though portrayed similarly to the preexisting filters, actually filtered the next page&mdash;not the event page the user was currently on. </p>
+                  <p>Using Invision to create a quick prototype, I walked users through a scenario where they would have to use the advanced filitering to select tickets dependent on predetermined criteria. From the very first usability test, this approach seemed confusing to the users. The first user did not comprehend that these advanced filters, though portrayed similarly to the preexisting filters, actually filtered the next page&mdash;not the event page the user was currently on. </p>
                   <p>In hindsight, this makes perfect sense, but while first designing this experience, we did not have these insights. After a couple users agreed upon the experience being confusing, I iterated on the design and did another test with a new user. This user definitely had a better experience with the page, but still had some concerns. After a few more rounds of this process, we were able to settle on an experience that was far more clear and user-friendly than the original design.</p>
                   <div class="spacer"></div>
-                  <p class="text-center "><img src="images/projects/innovation/innovation-3.png" alt="Innovation Day User Tests" class="img-fluid"></p>
+                  <p class="text-center "><img src="images/projects/innovation/innovation-3.png" alt="Innovation Day Usability Tests" class="img-fluid"></p>
                   <div class="spacer"></div>
                   <p>Since this was merely a project for a hackathon, the functionality has yet to exist in the wild yet. However, below is a quick look at the effort our team put in to develop this functionality within 24 hours. (Unfortunately, due to the time constraints, my design could not be implemented exactly as planned.)</p>
                   <p class="text-center">  
