Add new project files and hide old ones

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
-            <h1>Hello, my name is Jannon & I try to make the world a prettier place one design at a time.</h1>
+            <h1>Hello, my name is Jannon &amp; I'm a UX designer currently living in Austin, TX.</h1>
           </div>
         </div>
       </div>
@@ -91,9 +91,24 @@
       <div class="container-fluid">
 
         <div class="row">
-          <!-- Packages Start -->
+          <!-- House rules Start -->
           <div class="col-lg-6" data-aos="fade-up">
             <a class="project animsition-link" href="packages.html">
+              <figure>
+                <img src="#" alt="House rules project" class="img-fluid">
+              </figure>
+              <div class="project-hover">
+                <div class="project-hover-inner">
+                  <h2>House Rules</h2>
+                  <span>View Project</span>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- House rules End -->
+          <!-- Packages Start -->
+          <div class="col-lg-6" data-aos="fade-up">
+            <a class="project animsition-link" href="#">
               <figure>
                 <img src="images/projects/packages/packages-thumb.jpg" alt="Football Fan Experience Packages" class="img-fluid">
               </figure>
@@ -107,7 +122,7 @@
           </div>
           <!-- Packages End -->
           <!-- Splitwise Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="split.html">
               <figure>
                 <img src="images/projects/splitwise/split-thumb.jpg" alt="Splitwise App POC Redesign" class="img-fluid">
@@ -119,7 +134,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
           <!-- Splitwise End -->
         </div>
         <div class="row">
@@ -234,8 +249,23 @@
               </a>
             </div>
             <!-- Trans End -->
-            <!-- Super Start -->
+            <!-- Native Intro Start -->
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                <a class="project animsition-link" href="#">
+                  <figure>
+                    <img src="#" alt="Native intro for conversations experience" class="img-fluid">
+                  </figure>
+                  <div class="project-hover">
+                    <div class="project-hover-inner">
+                      <h2>Native Conversations Intro</h2>
+                      <span>View Project</span>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- Native Intro End -->
+            <!-- Super Start -->
+            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                 <a class="project animsition-link" href="super.html">
                   <figure>
                     <img src="images/projects/super/sb_thumb.png" alt="Super Bowl Ticket Prices Landing Page" class="img-fluid">
@@ -247,12 +277,12 @@
                     </div>
                   </div>
                 </a>
-              </div>
+              </div> -->
               <!-- Super End -->
           </div>
-          <div class="row">
+          <!-- <div class="row"> -->
             <!-- Gift Start -->
-          <div class="col-lg-6" data-aos="fade-up">
+          <!-- <div class="col-lg-6" data-aos="fade-up">
               <a class="project animsition-link" href="gift.html">
                 <figure>
                   <img src="images/projects/gift/gift-card_thumb.jpg" alt="Gift Card Page Redesign" class="img-fluid">
@@ -264,10 +294,10 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Gift End -->
             <!-- Timeline Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="timeline.html">
                 <figure>
                   <img src="images/projects/timeline/timeline_thumb.jpg" alt="Vivid Seats Timeline Wall" class="img-fluid">
@@ -279,12 +309,12 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Timeline End -->
-            </div>  
-            <div class="row">
+            <!-- </div>   -->
+            <!-- <div class="row"> -->
                <!-- Festival Start -->
-            <div class="col-lg-6" data-aos="fade-up">
+            <!-- <div class="col-lg-6" data-aos="fade-up">
                 <a class="project animsition-link" href="festival.html">
                   <figure>
                     <img src="images/projects/festival/festivals-thumb.gif" alt="Festival Page Animation" class="img-fluid">
@@ -296,10 +326,10 @@
                     </div>
                   </div>
                 </a>
-              </div>
+              </div> -->
               <!-- Festival End -->
 <!-- Wedding Start -->
-<div class="col-lg-6" data-aos="fade-up">
+<!-- <div class="col-lg-6" data-aos="fade-up">
     <a class="project animsition-link" href="wedding.html">
       <figure>
         <img src="images/projects/wedding/wedding_thumb.jpg" alt="Wedding Invitations" class="img-fluid">
@@ -311,10 +341,10 @@
         </div>
       </div>
     </a>
-  </div>
+  </div> -->
   <!-- Wedding End -->
 
-            </div>  
+            <!-- </div>   -->
       </div>
     </section>
     <!-- End Portfolio-->
