A whole bunch of changes

--- a/festival.html
+++ b/festival.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Music Festival Animations</h1>
-              <span>Illustrations for a Festival Landing Page Redesign</span>   
+              <span>Vivid Seats | Graphic Designer</span>   
             </div>
           </div>
         </div>
