--- a/gift.html
+++ b/gift.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Gift Center Redesign</h1>
-              <span>Landing Page for Vivid Seats Gift Cards</span>   
+              <span>Vivid Seats | Designer &amp; Developer</span>   
             </div>
           </div>
         </div>
