--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <div class="row">
           <!-- House rules Start -->
           <div class="col-lg-6" data-aos="fade-up">
-            <a class="project animsition-link" href="packages.html">
+            <a class="project animsition-link" href="house.html">
               <figure>
-                <img src="#" alt="House rules project" class="img-fluid">
+                <img src="images/projects/house/house_thumb.jpg" alt="House rules project" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
@@ -108,7 +108,7 @@
           <!-- House rules End -->
           <!-- Packages Start -->
           <div class="col-lg-6" data-aos="fade-up">
-            <a class="project animsition-link" href="#">
+            <a class="project animsition-link" href="packages.html">
               <figure>
                 <img src="images/projects/packages/packages-thumb.jpg" alt="Football Fan Experience Packages" class="img-fluid">
               </figure>
@@ -121,21 +121,6 @@
             </a>
           </div>
           <!-- Packages End -->
-          <!-- Splitwise Start -->
-          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="split.html">
-              <figure>
-                <img src="images/projects/splitwise/split-thumb.jpg" alt="Splitwise App POC Redesign" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Splitwise App Mock Redesign</h2>
-                  <span>View Project</span>
-                </div>
-              </div>
-            </a>
-          </div> -->
-          <!-- Splitwise End -->
         </div>
         <div class="row">
             <!-- Experience Start -->
@@ -185,8 +170,23 @@
               </a>
             </div>
             <!-- March End -->
+              <!-- Splitwise Start -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <a class="project animsition-link" href="split.html">
+              <figure>
+                <img src="images/projects/splitwise/split-thumb.jpg" alt="Splitwise App POC Redesign" class="img-fluid">
+              </figure>
+              <div class="project-hover">
+                <div class="project-hover-inner">
+                  <h2>Splitwise App Mock Redesign</h2>
+                  <span>View Project</span>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- Splitwise End -->
           <!-- Capital Start  -->
-          <div class="col-lg-6" data-aos="fade-up">
+          <!-- <div class="col-lg-6" data-aos="fade-up">
             <a class="project animsition-link" href="capital.html">
               <figure>
                 <img src="images/projects/capital/savor_thumb.jpg" alt="Capital One Savor Card Landing Page" class="img-fluid">
@@ -198,7 +198,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
           <!-- Capital End -->
         </div>
         <div class="row">
@@ -250,10 +250,10 @@
             </div>
             <!-- Trans End -->
             <!-- Native Intro Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-6 native-tour" data-aos="fade-up" data-aos-delay="100">
                 <a class="project animsition-link" href="#">
                   <figure>
-                    <img src="#" alt="Native intro for conversations experience" class="img-fluid">
+                    <img src="images/projects/native/Native_thumb.gif" alt="Native intro for conversations experience" class="img-fluid">
                   </figure>
                   <div class="project-hover">
                     <div class="project-hover-inner">
