--- a/innovation.html
+++ b/innovation.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Innovation Day Project</h1>
-              <span>Multi-Production Search for Events</span>   
+              <span>Vivid Seats | Experience Designer</span>   
             </div>
           </div>
         </div>
