--- a/march.html
+++ b/march.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>March Madness Page Redesign</h1>
-              <span>Vivid Seats Event Page Project</span>   
+              <span>Vivid Seats | Experience Designer</span>   
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
                 </div>
               </div>
               <div class="spacer"></div>
-              <p class="text-center"><img src="images/projects/march/mm-1_desktop.jpg" alt="March Madness Landing Page" class="img-fluid"></p>
+              <p class="text-center"><img src="images/projects/march/mm-1_desktop.png" alt="March Madness Landing Page" class="img-fluid"></p>
               <div class="spacer"></div>
               <div class="row justify-content-center">
                 <div class="col-lg-10">
