--- a/native.html
+++ b/native.html
@@ -78,7 +78,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Fan Experience Packages</h1>
-              <span>Football Partner Package Redesign</span>   
+              <span>Vrbo | Experience Designer</span>   
             </div>
           </div>
         </div>
