--- a/packages.html
+++ b/packages.html
@@ -78,7 +78,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Fan Experience Packages</h1>
-              <span>Football Partner Package Redesign</span>   
+              <span>Vivid Seats | Experience Designer</span>   
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
                 </div>
               </div>
               <div class="spacer"></div>
-              <p class="text-center"><img src="images/projects/packages/packages-1.jpg" alt="Redesigned fan package page" class="img-fluid"></p>
+              <p class="text-center"><img src="images/projects/packages/packages-1.jpg" alt="Redesigned fan package page" class="img-fluid hero-image"></p>
               <div class="spacer"></div>
               <div class="row justify-content-center">
                 <div class="col-lg-10">
@@ -122,8 +122,8 @@
                     <p>These football packages may look better, but the best part of this redesign is that they are already functioning better internally. Before, our team would have to go into the code everytime a package was sold out or a game had passed. A simple change turned into an ordeal with regression tests, pull request reviews and web releases. However, we were able to rework the code and implement it in a way so the package support team is able to make small changes to the packages by simply going into our CMS. So not only did this simple redesign create a better experience for our users, but it also created a better experience for us.</p>
                   </div>
               </div>
-              <div class="spacer"></div>
-              <p class="text-center"><a target="_blank" href="https://www.vividseats.com/nfl/chicago-bears-ultimate-fan-packages.html" class="button button--primary">View the Page</a></p>
+              <!-- <div class="spacer"></div>
+              <p class="text-center"><a target="_blank" href="https://www.vividseats.com/nfl/chicago-bears-ultimate-fan-packages.html" class="button button--primary">View the Page</a></p> -->
         </div>
 
       </section>
