--- a/split.html
+++ b/split.html
@@ -78,7 +78,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Splitwise App Mock Redesign</h1>
-              <span>Redesigning the Splitwise App on a Small Scale</span>   
+              <span>Personal Project | Experience Designer</span>   
             </div>
           </div>
         </div>
