--- a/timeline.html
+++ b/timeline.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Timeline Wall</h1>
-              <span>Vivid Seats Timeline</span>   
+              <span>Vivid Seats | Graphic Designer</span>   
             </div>
           </div>
         </div>
