--- a/trans.html
+++ b/trans.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Transactional Email Redesign</h1>
-              <span>Vivid Seats Transactional Email Redesign</span>   
+              <span>Vivid Seats | Experience Designer</span>   
             </div>
           </div>
         </div>
