--- a/wedding.html
+++ b/wedding.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Wedding Invitations</h1>
-              <span>Wedding Materials for My Brother's Wedding</span>   
+              <span>Personal Project | Graphic Designers</span>   
             </div>
           </div>
         </div>
