--- a/cupcake.html
+++ b/cupcake.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Cupcake Creator Website</h1>
-              <span>General Assembly Final Project</span>   
+              <span>General Assembly | Frontend Developer</span>   
             </div>
           </div>
         </div>
@@ -102,7 +102,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-10">
                   <div class="spacer"></div>
-                      <p class="text-center "><img src="images/projects/cupcake/cupcake-1_desktop.jpg" alt="Cupcake Creator on desktop" class="img-fluid"></p>
+                      <p class="text-center "><img src="images/projects/cupcake/cupcake-1_desktop.png" alt="Cupcake Creator on desktop" class="img-fluid"></p>
                   <div class="spacer"></div>
                   <p>I decided to design a cupcake creator that users could interact with to make their own unique cupcakes. This required not only frontend development skills, but also graphic design and user experience knowledge as well.</p>
                   <p class="text-center">  
