--- a/experience.html
+++ b/experience.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Experience Page</h1>
-              <span>Vivid Seats Story Page</span>   
+              <span>Vivid Seats | Designer &amp; Developer</span>   
             </div>
           </div>
         </div>
