--- a/house.html
+++ b/house.html
@@ -77,8 +77,8 @@
         <div class="container">
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
-              <h1>Fan Experience Packages</h1>
-              <span>Football Partner Package Redesign</span>   
+              <h1>House Rules Redesign</h1>
+              <span>Vrbo | Experience Designer</span>   
             </div>
           </div>
         </div>
@@ -90,40 +90,63 @@
         <div class="container" data-aos="fade-up">
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>Problem: How do we make our partner pages more engaging for users without altering the backend code?</strong><br/>
-                    With few resources, a UX colleague and I redesigned and implemented a new experience for users shopping for professional football packages.
+                  <p class="special"><strong>Problem: TBD</strong><br/>
+                    {Position on the project}
                   </p>
                 </div>
               </div>
               <div class="spacer"></div>
-              <p class="text-center"><img src="images/projects/packages/packages-1.jpg" alt="Redesigned fan package page" class="img-fluid"></p>
+              <p class="text-center"><img src="images/projects/house/house-1.0.jpg" alt="Original House Rules design" class="img-fluid hero-image"></p>
               <div class="spacer"></div>
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p>At any growing company, bandwith is precious and typically dedicated to features and products that bring in the greatest revenue. However, this reality causes certain products to be left out of major redesign efforts. This occurred with the Vivid Seats football packages. Though these unique products allowed fans to take their gameday experience to the next level, there was never a great internal focus on them from a UX standpoint. Therefore, they remained outdated and unresponsive for far too long.</p>
-                  <p>After years of arduous manual updating and web release dependencies, my team decided that something needed to change. Though we knew we would not receive support from backend teams, a coworker and I took to brainstorming ways we could improve the package experience for users with minimal code changes.</p>
-                  <p>Below is a before and after comparison of one of our team package pages. From a UI standpoint, one of our focuses was to cut back on the amount of copy presented to the users. In this digital age, users do not take the time to read paragraphs upon paragraphs of copy. Therefore, we decided to keep it simple by limiting the content and allocating it to individual pages accordingly.</p>
-                  <p class="text-center">
-                      <div id="cocoenHideMobile" class="cocoen">
-                          <img width="100%" src="images/projects/packages/packages-2.0.jpg" alt="Old Package Template">
-                          <div class="spacer"></div>
-                          <div class="spacer"></div>
-                          <img width="100%" src="images/projects/packages/packages-2.1.jpg" alt="New Package Template">
-                      </div>
-                  </p>
+                  <p>{Content goes here}</p>
                 </div>
               </div>
               <div class="row align-items-center justify-content-center">
                 <div class="col-lg-10">
-                    <p>One of the major drawbacks to the previous design was the lack of a mobile experience. Since a major source of site traffic comes from mobile devices, web pages that are not responsive create unusable experiences for mobile users and because of this can cost a company in potential revenue.</p>
+                  <p>{Content goes here}</p>
                     <div class="spacer"></div>
-                    <p class="text-center "><img src="images/projects/packages/packages-3.png" alt="Mobile view for packages" class="img-fluid"></p>
+                    <p class="text-center "><img src="images/projects/house/house-1.1.jpg" alt="????" class="img-fluid"></p>
                     <div class="spacer"></div>
-                    <p>These football packages may look better, but the best part of this redesign is that they are already functioning better internally. Before, our team would have to go into the code everytime a package was sold out or a game had passed. A simple change turned into an ordeal with regression tests, pull request reviews and web releases. However, we were able to rework the code and implement it in a way so the package support team is able to make small changes to the packages by simply going into our CMS. So not only did this simple redesign create a better experience for our users, but it also created a better experience for us.</p>
+                    <p>{Content goes here}</p>
                   </div>
               </div>
-              <div class="spacer"></div>
-              <p class="text-center"><a target="_blank" href="https://www.vividseats.com/nfl/chicago-bears-ultimate-fan-packages.html" class="button button--primary">View the Page</a></p>
+              <div class="row align-items-center justify-content-center">
+                <div class="col-lg-10">
+                  <p>{Content goes here}</p>
+                    <div class="spacer"></div>
+                    <p class="text-center "><img src="images/projects/house/house-2.jpg" alt="????" class="img-fluid"></p>
+                    <div class="spacer"></div>
+                    <p>{Content goes here}</p>
+                  </div>
+              </div>
+              <div class="row align-items-center justify-content-center">
+                <div class="col-lg-10">
+                  <p>{Content goes here}</p>
+                    <div class="spacer"></div>
+                    <p class="text-center "><img src="images/projects/house/house-3.jpg" alt="????" class="img-fluid"></p>
+                    <div class="spacer"></div>
+                    <p>{Content goes here}</p>
+                  </div>
+              </div>
+              <p class="text-center">
+                <div id="cocoenHideMobile" class="cocoen">
+                    <img src="images/projects/house/house-4.0.jpg" alt="Original House Rules design ">
+                    <div class="spacer"></div>
+                    <div class="spacer"></div>
+                    <img src="images/projects/house/house-4.1.jpg" alt="Updated House Rules design">
+                </div>
+            </p>
+            <div class="row align-items-center justify-content-center">
+              <div class="col-lg-10">
+                <p>{Content goes here}</p>
+                  <div class="spacer"></div>
+                  <p class="text-center "><img src="images/projects/house/house-5.jpg" alt="????" class="img-fluid"></p>
+                  <div class="spacer"></div>
+                  <p>{Content goes here}</p>
+                </div>
+            </div>
         </div>
 
       </section>
