--- a/mapbox.html
+++ b/mapbox.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Mapbox MLB Map</h1>
-              <span>Map Showcasing Favorite US MLB Teams</span>   
+              <span>Vivid Seats | Experience Designer</span>   
             </div>
           </div>
         </div>
