--- a/super.html
+++ b/super.html
@@ -80,7 +80,7 @@
           <div class="row align-items-center justify-content-center project-intro">
             <div class="col-lg-10" data-aos="fade-up">
               <h1>Super Bowl Ticket Prices Page</h1>
-              <span>Landing Page Showcasing Super Bowl Ticket Prices</span>   
+              <span>Vivid Seats | Designer &amp; Developer</span>   
             </div>
           </div>
         </div>
