Add house rules project

--- a/house.html
+++ b/house.html
@@ -92,44 +92,49 @@
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-lg-10">
-            <p class="special"><strong>Problem: How can we simplify hosts’ house rules for travelers in order to
-                decrease loss of revenue.</strong><br />
+            <p class="special"><strong>Problem: How can we simplify hosts’ property rules to decrease loss of revenue due to cancellations.</strong><br />
               Working closely with a UX Manager and dedicated Content Strategist, I helped to redesign the host
               experience for vacation rental property rules.
             </p>
           </div>
         </div>
         <div class="spacer"></div>
-        <p class="text-center"><img src="images/projects/house/house-1.0.jpg" alt="Original House Rules design"
-            class="img-fluid hero-image"></p>
-        <div class="row justify-content-center">
-            <p class="image-caption">(This is a picture caption)</p>
+        <div class="col-lg-10 offset-lg-1">
+          <img src="images/projects/house/house-1.0.jpg" alt="Original House Rules design" class="img-fluid hero-image">
         </div>
         <div class="spacer"></div>
         <div class="row justify-content-center">
-          <div class="col-lg-10">
+          <p class="image-caption text-center">(Updated design for house rules page.)</p>
+        </div>
+        <div class="spacer"></div>
+        <div class="spacer"></div>
+        <div class="row">
+          <div class="col-lg-10 offset-lg-1">
             <p>The original design for our hosts’ rules allowed for great flexibility. While this offered convenience
               for hosts, this caused issues for travelers.
-              Often times, hosts would have nuanced and conflicting rules in a free&ndash;text format. This resulted in
+              Often times, hosts would have nuanced and conflicting rules in a free-text format. This resulted in
               unnecessary confusion for travelers and led to a
               loss in bookings (not to mention a lot of customer experience resources).</p>
           </div>
         </div>
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-10">
-
+        <div class="row align-items-center">
+          <div class="col-lg-10 offset-lg-1">
             <p>The design of the house rules page only exacerbated the issues between hosts and travelers. During a UX
-              metric review, the research team uncovered 3
-              blockers and 38 frictions. The specific blockers involved saving rules, modifying rules, and removing
+              metric review, the research team uncovered 3 UX blockers and 38 frictions. The specific blockers involved saving rules, modifying rules, and removing
               custom rules.</p>
             <div class="spacer"></div>
-            <p class="text-center "><img src="images/projects/house/house-1.1.jpg" alt="????" class="img-fluid"></p>
+            <div class="col-lg-10 offset-lg-1">
+              <img src="images/projects/house/house-1.1.jpg" alt="Original house rule design" class="img-fluid">
+            </div>
+            <div class="row justify-content-center">
+              <p class="image-caption text-center">(Original design for the house rules page.)</p>
+            </div>
+            <div class="spacer"></div>
             <div class="spacer"></div>
             <p>After discovering the issues and gaps, we began to iterate from the original designs, also referencing
               our competitors’ experiences along the way.
               We had regular Scrum of Scrums meetings and solicited feedback from other designers on our team. Through
               these efforts, we arrived at a design ready to test.</p>
-
             <p>Some of the most important proposed updates to the experience included:
             <ul>
               <li>Docked save button</li>
@@ -140,68 +145,78 @@
           </div>
         </div>
         <div class="spacer"></div>
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-4 col-sm-12">
-            <p class="text-center "><img src="images/projects/house/house-2.jpg" alt="Early design iteration 1"
-                class="img-fluid"></p>
-          </div>
-          <div class="col-lg-4 col-sm-12">
-            <p class="text-center "><img src="images/projects/house/house-3.jpg" alt="Early design iteration 2"
-                class="img-fluid"></p>
-          </div>
-        </div>
-        <div class="spacer"></div>
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-10">
+        <div class="row align-items-center">
+          <div class="col-lg-5 offset-lg-1 col-sm-12">
             <p>We created a Figma prototype from the designs and worked with a UX researcher to conduct usability
               testing with our hosts.</p>
-
             <p>The study led to some useful insights concerning the additional host needs:
             <uL>
               <li>Clearer content about service animal rules</li>
               <li>Closer relationship between house rules and rental agreement (a document that acts as a
-                short&ndash;term lease)</li>
+                short-term lease)</li>
               <li>Indication that the primary renter needs to stay on the property</li>
             </uL>
             </p>
             <p>The updates we set out to make decreased the number of blockers and frictions initially found by our
               research team. No participants struggled to
               save their rules and the majority of participants had no issues editing their rules.</p>
-
           </div>
-        </div>
-
-        <p class="text-center">
-        <div id="cocoenHideMobile" class="cocoen">
-          <img src="images/projects/house/house-4.0.jpg" alt="Original House Rules design ">
+          <div class="col-lg-4 offset-lg-1 col-sm-12">
+            <img src="images/projects/house/house-2.jpg" alt="Early design iteration" class="img-fluid">
+            <div class="spacer"></div>
+            <div class="row justify-content-center">
+              <p class="image-caption text-center">(Early ideas for updated house rules designs.)</p>
+            </div>
+          </div>
           <div class="spacer"></div>
           <div class="spacer"></div>
-          <img src="images/projects/house/house-4.1.jpg" alt="Updated House Rules design">
         </div>
-        </p>
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-10">
+        <div class="spacer"></div>
+        <div class="col-lg-10 offset-lg-1">
+          <img src="images/projects/house/house-5.jpg" alt="Rule states for engineers"
+            class="img-fluid">
+        </div>
+        <div class="spacer"></div>
+        <div class="row justify-content-center">
+          <p class="image-caption text-center">(Documentation of different rule states for engineers.)</p>
+        </div>
+        <div class="spacer"></div>
+        <div class="spacer"></div>
+        <div class="row align-items-center">
+          <div class="col-lg-10 offset-lg-1">
             <p>Unfortunately, due to the craziness that was the year 2020, we were unable to implement any updates to
-              our designs post&ndash;study.
+              our designs post-study.
               There was a deadline our product team was trying to meet, so we instead settled on a stepped roll-out
               approach where we could iteratively improve the house rules page.</p>
-
             <p>During the initial development and roll out of our first designs, I regularly attended the team stand-ups
               and reviewed specific JIRA tickets with the coded designs
               prior to any code pushes. This helped greatly to ensure what was released reflected our design vision.</p>
-
-            <div class="spacer"></div>
-            <p class="text-center "><img src="images/projects/house/house-5.jpg"
-                alt="'Final' design of house rules page" class="img-fluid"></p>
-            <div class="spacer"></div>
             <p>Overall, other teams have spoken highly of the improvements to house rules, but we are still waiting on
               more concrete metrics to prove that our updates have helped
               the relationship between hosts and travelers. There is also still some important functionality that needs
               to be developed to truly gauge the impact the updates have had.
               One item that will be developed soon is a feedback outlet via the house rules page that will allow hosts
               to provide their opinions on the specific experience.</p>
+              <!-- <div class="spacer"></div> -->
+              <!-- <p class="text-center">
+              <div id="cocoenHideMobile" class="cocoen">
+                <img src="images/projects/house/house-4.0.jpg" alt="Original house rules design">
+                <div class="spacer"></div>
+                <div class="spacer"></div>
+                <img src="images/projects/house/house-4.1.jpg" alt="Most recent design updates for house rules">
+              </div>
+            </p> -->
           </div>
         </div>
+        <div class="spacer"></div>
+        <div class="col-lg-10 offset-lg-1">
+          <img src="images/projects/house/house-4.1.jpg" alt="Most recent design updates for house rules"
+            class="img-fluid secondary-hero-image">
+        </div>
+        <div class="row justify-content-center">
+          <p class="image-caption text-center">(Most up-to-date designs of the house rules page.)</p>
+        </div>
+        <div class="spacer"></div>
       </div>
 
     </section>
