--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </div>
             <!-- Trans End -->
             <!-- Native Intro Start -->
-            <div class="col-lg-6 native-tour" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="col-lg-6 native-tour" data-aos="fade-up" data-aos-delay="100">
                 <a class="project animsition-link" href="#">
                   <figure>
                     <img src="images/projects/native/Native_thumb.gif" alt="Native intro for conversations experience" class="img-fluid">
@@ -262,10 +262,10 @@
                     </div>
                   </div>
                 </a>
-              </div>
+              </div> -->
               <!-- Native Intro End -->
             <!-- Super Start -->
-            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                 <a class="project animsition-link" href="super.html">
                   <figure>
                     <img src="images/projects/super/sb_thumb.png" alt="Super Bowl Ticket Prices Landing Page" class="img-fluid">
@@ -277,7 +277,7 @@
                     </div>
                   </div>
                 </a>
-              </div> -->
+              </div>
               <!-- Super End -->
           </div>
           <!-- <div class="row"> -->
