--- a/mapbox.html
+++ b/mapbox.html
@@ -97,7 +97,7 @@
                 </div>
               </div>
               <div class="spacer"></div>
-              <p class="text-center"><img src="images/projects/mapbox/mapbox-1_desktop.jpg" alt="MLB Mapbox Map" class="img-fluid"></p>
+              <p class="text-center"><img src="images/projects/mapbox/mapbox-1_desktop.png" alt="MLB Mapbox Map" class="img-fluid"></p>
               <div class="spacer"></div>
               <div class="row justify-content-center">
                 <div class="col-lg-10">
