--- a/super.html
+++ b/super.html
@@ -98,7 +98,7 @@
                 </div>
               </div>
               <div class="spacer"></div>
-              <p class="text-center"><img src="images/projects/super/sb-1_desktop.jpg" alt="Super Bowl Landing Page" class="img-fluid"></p>
+              <p class="text-center"><img src="images/projects/super/sb-1_desktop.png" alt="Super Bowl Landing Page" class="img-fluid"></p>
               <div class="spacer"></div>
               <div class="row justify-content-center">
                 <div class="col-lg-10">
