--- a/house.html
+++ b/house.html
@@ -92,7 +92,8 @@
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-lg-10">
-            <p class="special"><strong>Problem: How can we simplify hosts’ property rules to decrease loss of revenue due to cancellations.</strong><br />
+            <p class="special"><strong>Problem: How can we simplify hosts’ property rules to decrease loss of revenue
+                due to cancellations.</strong><br />
               Working closely with a UX Manager and dedicated Content Strategist, I helped to redesign the host
               experience for vacation rental property rules.
             </p>
@@ -120,7 +121,8 @@
         <div class="row align-items-center">
           <div class="col-lg-10 offset-lg-1">
             <p>The design of the house rules page only exacerbated the issues between hosts and travelers. During a UX
-              metric review, the research team uncovered 3 UX blockers and 38 frictions. The specific blockers involved saving rules, modifying rules, and removing
+              metric review, the research team uncovered 3 UX blockers and 38 frictions. The specific blockers involved
+              saving rules, modifying rules, and removing
               custom rules.</p>
             <div class="spacer"></div>
             <div class="col-lg-10 offset-lg-1">
@@ -168,20 +170,7 @@
               <p class="image-caption text-center">(Early ideas for updated house rules designs.)</p>
             </div>
           </div>
-          <div class="spacer"></div>
-          <div class="spacer"></div>
         </div>
-        <div class="spacer"></div>
-        <div class="col-lg-10 offset-lg-1">
-          <img src="images/projects/house/house-5.jpg" alt="Rule states for engineers"
-            class="img-fluid">
-        </div>
-        <div class="spacer"></div>
-        <div class="row justify-content-center">
-          <p class="image-caption text-center">(Documentation of different rule states for engineers.)</p>
-        </div>
-        <div class="spacer"></div>
-        <div class="spacer"></div>
         <div class="row align-items-center">
           <div class="col-lg-10 offset-lg-1">
             <p>Unfortunately, due to the craziness that was the year 2020, we were unable to implement any updates to
@@ -191,14 +180,28 @@
             <p>During the initial development and roll out of our first designs, I regularly attended the team stand-ups
               and reviewed specific JIRA tickets with the coded designs
               prior to any code pushes. This helped greatly to ensure what was released reflected our design vision.</p>
+          </div>
+        </div>
+        <div class="spacer"></div>
+        <div class="col-lg-10 offset-lg-1">
+          <img src="images/projects/house/house-5.jpg" alt="Rule states for engineers" class="img-fluid">
+        </div>
+        <div class="spacer"></div>
+        <div class="row justify-content-center">
+          <p class="image-caption text-center">(Documentation of different rule states for engineers.)</p>
+        </div>
+        <div class="spacer"></div>
+        <div class="spacer"></div>
+        <div class="row align-items-center">
+          <div class="col-lg-10 offset-lg-1">
             <p>Overall, other teams have spoken highly of the improvements to house rules, but we are still waiting on
               more concrete metrics to prove that our updates have helped
               the relationship between hosts and travelers. There is also still some important functionality that needs
               to be developed to truly gauge the impact the updates have had.
               One item that will be developed soon is a feedback outlet via the house rules page that will allow hosts
               to provide their opinions on the specific experience.</p>
-              <!-- <div class="spacer"></div> -->
-              <!-- <p class="text-center">
+            <!-- <div class="spacer"></div> -->
+            <!-- <p class="text-center">
               <div id="cocoenHideMobile" class="cocoen">
                 <img src="images/projects/house/house-4.0.jpg" alt="Original house rules design">
                 <div class="spacer"></div>
@@ -216,6 +219,7 @@
         <div class="row justify-content-center">
           <p class="image-caption text-center">(Most up-to-date designs of the house rules page.)</p>
         </div>
+        <div class="spacer"></div>
         <div class="spacer"></div>
       </div>
 
